...
        progressView.isHidden = isHidden
    }
    
    // MARK: - Private Methods
    
    private func setUpWebView() {
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        estimatedProgressObservation = webView.observe(\.estimatedProgress, options: .new) { [weak self] _, change  in
            guard let newValue = change.newValue else {
                assertionFailure("WebViewViewController.viewWillAppear: failed to observe progress change -- no new value")
                return
            }
...
